<resources>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="formTitle">Sizinle iletişimde kalabilmemiz için lütfen bilgilerinizi eksiksiz doldurunuz</string>
    <string name="formDesc">* ile biten alanların doldurulması zorunludur.</string>
    <string name="startSession">Oturumu Başlat</string>
    <string name="chatActions">Görüşme Aksiyonları</string>
    <string name="writeMessage">Mesaj Yazın</string>
    <string name="weRunExairon">We run on Exairon</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="file">Dosya</string>
    <string name="location">Konum</string>
    <string name="sessionFinishMessage">Gerçekten oturumu bitirmek istiyor musunuz?</string>
    <string name="yes">Evet</string>
    <string name="no">Hayır</string>
    <string name="howWasYourExp">Görüşme Deneyimin nasıldı?</string>
    <string name="surveyHint">Lütfen bize görüşlerinizi bildirin…</string>
    <string name="submit">Gönder</string>
    <string name="skip">Atla</string>
    <string name="formError">Lütfen alanları doğru şekilde doldurunuz.</string>
    <string name="take_picture">Fotoğrag Seç</string>
    <string name="take_picture_description">Bir fotoğraf seç</string>
    <string name="name">Ad</string>
    <string name="surname">Soyad</string>
    <string name="email">E-posta</string>
    <string name="phone">Telefon (Ülke kodu ile birlikte)</string>
    <string name="nameHint">Lütfen adınızı giriniz</string>
    <string name="surnameHint">Lütfen soyadınızı giriniz</string>
    <string name="emailHint">Lütfen e-posta adresinizi giriniz</string>
    <string name="phoneHint">Lütfen telefon numaranızı giriniz</string>
</resources>