<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:gravity="right"
        android:paddingHorizontal="10dp"
        android:paddingTop="10dp"
        android:orientation="horizontal"
        tools:ignore="RtlHardcoded">
        <TextView
            android:id="@+id/title"
            android:text="@string/chatActions"
            android:textColor="#0E2434"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:autoLink="all"
            android:textStyle="bold"
            android:layout_marginStart="40dp"/>
        <ImageButton
            android:id="@+id/close_btn"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/close"
            android:contentDescription="Close" />
    </LinearLayout>
        <LinearLayout
            android:id="@+id/camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:paddingHorizontal="20dp"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:src="@drawable/camera"
                android:contentDescription="TODO" />
            <TextView
                android:text="@string/camera"
                android:gravity="left"
                android:textColor="#2A516F"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginStart="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:src="@drawable/gallery" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="left"
                android:text="@string/gallery"
                android:textColor="#2A516F"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:paddingHorizontal="20dp"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:src="@drawable/file" />
            <TextView
                android:textColor="#2A516F"
                android:text="@string/file"
                android:gravity="left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginStart="10dp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:paddingHorizontal="20dp"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:src="@drawable/location" />
            <TextView
                android:textColor="#2A516F"
                android:text="@string/location"
                android:gravity="left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginStart="10dp"/>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>