<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:padding="30dp"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:color="#2e2e2e"
        android:gravity="center"
        android:text="@string/howWasYourExp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/emojiLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <ImageButton
            android:id="@+id/survey1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.20"
            android:background="@drawable/survey1_passive" />

        <ImageButton
            android:id="@+id/survey2"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.20"
            android:background="@drawable/survey2_passive" />

        <ImageButton
            android:id="@+id/survey3"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.20"
            android:background="@drawable/survey3" />

        <ImageButton
            android:id="@+id/survey4"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.20"
            android:background="@drawable/survey4_passive" />

        <ImageButton
            android:id="@+id/survey5"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.20"
            android:background="@drawable/survey5_passive" />
    </LinearLayout>

    <EditText
        android:id="@+id/surveyTextArea"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:ems="10"
        android:hint="@string/surveyHint"
        android:padding="10dp"
        android:background="@drawable/edit_text"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emojiLayout" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:textSize="15sp"
        android:text="@string/submit"
        android:background="@drawable/submit_button"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surveyTextArea" />


</androidx.constraintlayout.widget.ConstraintLayout>